remove outline on mobile menu click and make sure the mobile menu fills screen vertically

--- a/_sass/layout/_page-header.scss
+++ b/_sass/layout/_page-header.scss
@@ -122,6 +122,7 @@
   transition: left ease-in-out 250ms;
   background: rgba($color-haiti, .9);
   will-change: transform;
+  min-height: 2400px;
 
   @media (min-width: $bp-nav) {
     position: relative;
@@ -260,6 +261,7 @@
   border: 0;
   border-radius: rem-calc(4);
   background: transparent;
+  outline: none;
 
   @include at-least(small) {
     margin-top: rem-calc(15);
